<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lend"
            android:icon="@drawable/ic_add"
            android:title="@string/add_lend_string" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_historylends"
            android:icon="@drawable/ic_hisotry"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_mypastlends"
            android:icon="@drawable/ic_prest"
            android:title="@string/my_lends_string" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/user"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_return_object"
            android:icon="@drawable/ic_return"
            android:title="@string/return_object_string" />
    </group>
</menu>