<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lend">

    <fragment
        android:id="@+id/nav_lend"
        android:name="com.monsalven.Practica_3_Fragments.ui.addlend.AddLendFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/add_lend_fragment" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.monsalven.Practica_3_Fragments.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/inventory_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.monsalven.Practica_3_Fragments.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.monsalven.Practica_3_Fragments.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>